--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.2",
+    "eslint-utils": "^1.4.1",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
