--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lodash.template": "^4.5.0",
+    "mixin-deep": "^1.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-transition-group": "^4.2.2",
+    "set-value": "^2.0.1",
     "uuid": "^3.3.3"
   },
   "scripts": {
